Task 1.1.2 is completed

--- a/src/main/resources/database.properties
+++ b/src/main/resources/database.properties
@@ -6,6 +6,6 @@ url = jdbc:mysql://localhost:3306?serverTimezone=Europe/Moscow&useSSL=false
 #можно так:
 #url = jdbc:mysql://localhost:3306
 
-username = root
-#username = user
+#username = root
+username = user
 password = 1234
