--- a/src/main/resources/hibernate.properties
+++ b/src/main/resources/hibernate.properties
@@ -1,9 +1,7 @@
-hibernate.connection.driver_class = org.postgresql.Driver
-hibernate.connection.url = jdbc:mysql://localhost:3306?serverTimezone=Europe/Moscow&useSSL=false
-hibernate.connection.username = myuser
-hibernate.connection.password = secret
-hibernate.c3p0.min_size=5
-hibernate.c3p0.max_size=20
-hibernate.c3p0.timeout=1800
-hibernate.c3p0.max_statements=50
-hibernate.dialect = org.hibernate.dialect.PostgreSQL82Dialect
+hibernate.dialect=org.hibernate.dialect.MySQLDialect
+hibernate.connection.driver_class=com.mysql.jdbc.Driver
+hibernate.connection.url=jdbc:mysql://localhost:3306?serverTimezone=Europe/Moscow&useSSL=false
+hibernate.connection.username=user
+hibernate.connection.password=1234
+hibernate.show_sql=true
+hibernate.format_sql=true
